=================
Changes for Crate
=================

Unreleased
==========

 - Fixed validation of known configuration file settings. The settings are also
   validated upon start-up.

 - Fix: Index columns based on string arrays are correctly populated with values.

 - Updated crate-admin to ``1.1.1`` which includes the following changes:

    - Fixed a console results issue that caused the results table not to be
      displayed after horizontal scrolling.

    - Fixed an issue that caused the admin-ui to load only one plugin.

    - Display warning in the console view when the query result contains
      an unsafe integer.

    - Relocated the help resources section to be underneath the tweet
      import tutorial.

    - Show loading indicator when `Execute Query ` is in progress.

    - Improved console results table, including data type based colorization,
       alternating row colorization, structured object/array formatting,
       human-readable timestamps, Google Maps link on geo-point
       results & lazy loading on result sets larger than 100 rows.

 - Fixed evaluation on ``UPDATE`` of generated columns without referenced
   columns, e.g. generated columns with a ``CURRENT_TIMESTAMP`` expression.

 - Fixed global aggregations on JOINs with 3 or more tables.

 - BREAKING: The TableFunctionImplementation interface was streamlined
   with other function implementation semantics. This requires
   function implementation plugins to be adapted to the new interface.

 - It is now supported to order and group by predicate functions in general
   with the exception of the `match` predicate.

 - Removed limitation which didn't allow ordering on partitioned columns in
   GROUP BY query

 - Selecting ``os['timestamp'] from ``sys.nodes`` returns the actual timestamp
   of each node clock at the time of collecting the metric instead of the
   timestamp on the handler node.

 - BREAKING: Removed deprecated setting ``indices.fielddata.breaker`` that have