@@ -1525,14 +1525,38 @@ public class CrateSettings {
         }
     };
 
-    public static final List<Setting<?, ?>> CRATE_SETTINGS = ImmutableList.<Setting<?, ?>>of(
+    public static final List<Setting<?, ?>> CRATE_SETTINGS = ImmutableList.of(
         STATS,
         BULK,
         GRACEFUL_STOP
     );
 
-    public static final List<Setting> SETTINGS = ImmutableList.<Setting>of(
-        STATS, CLUSTER, DISCOVERY, INDICES, BULK, GATEWAY, UDC, PSQL);
+    public static final NestedSetting LICENSE = new NestedSetting() {
+        @Override
+        public String name() {
+            return "license";
+        }
+
+        @Override
+        public List<Setting> children() {
+            return ImmutableList.of(LICENSE_ENTERPRISE);
+        }
+
+        @Override
+        public boolean isRuntime() {
+            return false;
+        }
+    };
+
+    public static final BoolSetting LICENSE_ENTERPRISE = new BoolSetting("enterprise", false, false) {
+        @Override
+        public Setting parent() {
+            return LICENSE;
+        }
+    };
+
+    public static final List<Setting> SETTINGS = ImmutableList.of(
+        STATS, CLUSTER, DISCOVERY, INDICES, BULK, GATEWAY, UDC, PSQL, LICENSE);
 
     public static final Map<String, SettingsApplier> SUPPORTED_SETTINGS = ImmutableMap.<String, SettingsApplier>builder()
         .put(CrateSettings.STATS.settingName(),
